Use the padding-edge as the absolute containing block when the containing block is established by a relatively positioned inline.  CSS2.1 is being changed accordingly.  Bug 300816, r+sr=dbaron, a=asa